--- a/index.html
+++ b/index.html
@@ -59,7 +59,21 @@
     Paris est l’une des villes les plus emblématiques du monde, connue pour sa culture, son architecture, sa gastronomie et ses rues romantiques. De la Tour Eiffel à Montmartre, en passant par le Marais et les quais de Seine, chaque coin de la capitale offre une expérience unique.
   </p>
 
-  <img src="https://source.unsplash.com/800x400/?paris" alt="Paris">
+  <h2>Galerie de Paris</h2>
+
+<img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d" alt="Pont la nuit à Paris">
+<img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34" alt="Tour Eiffel">
+<img src="https://images.unsplash.com/photo-1508051123996-69f8caf4891d" alt="Immeubles modernes à Paris">
+<img src="https://images.unsplash.com/photo-1574169208507-84376144848b" alt="Bâtiment historique">
+<img src="https://images.unsplash.com/photo-1492684223066-81342ee5ff30" alt="Architecture urbaine">
+
+<h2>Découvre Paris</h2>
+<ul>
+  <li><a class="button" href="https://shrinke.me/paris1" target="_blank">Balade à Montmartre</a></li>
+  <li><a class="button" href="https://shrinke.me/paris2" target="_blank">Coucher de soleil sur la Seine</a></li>
+  <li><a class="button" href="https://shrinke.me/paris3" target="_blank">Musées et galeries</a></li>
+</ul>
+
 
   <h2>Découvre Paris</h2>
   <ul>
