--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       padding: 20px;
       text-align: center;
     }
-    gallery {
+    .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 10px;
       margin-top: 20px;
     }
-    gallery img {
+    .gallery img {
       width: 100%;
       height: auto;
       border-radius: 8px;
@@ -74,12 +74,14 @@
 
 <h2>Galerie de Paris</h2>
 
+<h2>Galerie de Paris</h2>
+
 <div class="gallery">
-  <img src="https://images.unsplash.com/photo-1491553895911-0055eca6402d" alt="Pont la nuit à Paris">
-  <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34" alt="Tour Eiffel">
-  <img src="https://images.unsplash.com/photo-1508051123996-69f8caf4891d" alt="Immeubles modernes">
-  <img src="https://images.unsplash.com/photo-1574169208507-84376144848b" alt="Bâtiment historique">
-  <img src="https://images.unsplash.com/photo-1492684223066-81342ee5ff30" alt="Bâtiment en béton rouge et blanc">
+  <img src="images/Paris_1.jpg" alt="Image 1 de Paris">
+  <img src="images/Paris_2.jpg" alt="Image 2 de Paris">
+  <img src="images/Paris_3.jpg" alt="Image 3 de Paris">
+  <img src="images/Paris_4.jpg" alt="Image 4 de Paris">
+  <img src="images/Paris_5.jpg" alt="Image 5 de Paris">
 </div>
 
 <h2>Découvre Paris</h2>
