--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
   <img src="images/Paris_3.jpg" alt="Image 3 de Paris">
   <img src="images/Paris_4.jpg" alt="Image 4 de Paris">
   <img src="images/Paris_5.jpg" alt="Image 5 de Paris">
+  <img src="images/Paris_6.jpg" alt="Image 6 de Paris">
 </div>
 
 <h2>Découvre Paris</h2>
