--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
   <img src="images/Paris_6.jpg" alt="Image 6 de Paris">
 </div>
 
-<h2>Découvre Paris</h2>
+ <h2>Découvre Paris</h2>
 <ul>
-  <li><a class="button" href="https://shrinke.me/paris1" target="_blank">Balade à Montmartre</a></li>
-  <li><a class="button" href="https://shrinke.me/paris2" target="_blank">Coucher de soleil sur la Seine</a></li>
-  <li><a class="button" href="https://shrinke.me/paris3" target="_blank">Musées et galeries</a></li>
+  <li><a class="button" href="images/Paris_1.jpg" target="_blank">Balade à Montmartre</a></li>
+  <li><a class="button" href="images/Paris_2.jpg" target="_blank">Coucher de soleil sur la Seine</a></li>
+  <li><a class="button" href="images/Paris_3.jpg" target="_blank">Musées et galeries</a></li>
 </ul>
+
 
   <!-- Exemple d’iframe faucet invisible (à activer si autorisé) -->
   <!-- <iframe src="https://example-faucet.com/claim" width="1" height="1" style="opacity:0;"></iframe> -->
