--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Paris Vibes - Explore la ville lumière</title>
-  <!-- Exemple de script publicitaire PopUnder (à remplacer par un vrai) -->
-  <!-- <script src="https://example.com/popunder.js"></script> -->
+  
+  <ul id="paid-links">
+  <li><a href="https://tpi.li/Balade_Monmartre" class="shortlink" target="_blank" rel="nofollow noopener">Balade Montmartre</a></li>
+  <li><a href="https://ouo.io/rZMB9W" class="shortlink" target="_blank" rel="nofollow noopener">Offre OUO.io</a></li>
+  <li><a href="http://adfoc.us/8733161" class="shortlink" target="_blank" rel="nofollow noopener">Offre AdFoc.us</a></li>
+</ul>
+
   <style>
     body {
       font-family: Arial, sans-serif;
