--- a/index.html
+++ b/index.html
@@ -58,52 +58,50 @@
     }
   </style>
 </head>
+
 <body>
-  
-<ul id="paid-links">
-  <li><a href="https://tpi.li/Balade_Monmartre" class="shortlink" target="_blank" rel="nofollow noopener">Balade Montmartre</a></li>
-  <li><a href="https://ouo.io/rZMB9W" class="shortlink" target="_blank" rel="nofollow noopener">Offre OUO.io</a></li>
-  <li><a href="http://adfoc.us/8733161" class="shortlink" target="_blank" rel="nofollow noopener">Offre AdFoc.us</a></li>
-</ul>
-  
-<header>
-  <h1>Bienvenue à Paris</h1>
-  <p>La ville lumière t’attend</p>
-</header>
 
-<main>
-  <p>
-    Paris est l’une des villes les plus emblématiques du monde, connue pour sa culture, son architecture, sa gastronomie et ses rues romantiques. De la Tour Eiffel à Montmartre, en passant par le Marais et les quais de Seine, chaque coin de la capitale offre une expérience unique.
-  </p>
+  <header>
+    <h1>Bienvenue à Paris</h1>
+    <p>La ville lumière t’attend</p>
+  </header>
 
+  <main>
+    <p>
+      Paris est l’une des villes les plus emblématiques du monde, connue pour sa culture, son architecture, sa gastronomie et ses rues romantiques. De la Tour Eiffel à Montmartre, en passant par le Marais et les quais de Seine, chaque coin de la capitale offre une expérience unique.
+    </p>
 
-<h2>Galerie de Paris</h2>
+    <h2>Galerie de Paris</h2>
+    <div class="gallery">
+      <img src="images/Paris_1.jpg" alt="Image 1 de Paris">
+      <img src="images/Paris_2.jpg" alt="Image 2 de Paris">
+      <img src="images/Paris_3.jpg" alt="Image 3 de Paris">
+      <img src="images/Paris_4.jpg" alt="Image 4 de Paris">
+      <img src="images/Paris_5.jpg" alt="Image 5 de Paris">
+      <img src="images/Paris_6.jpg" alt="Image 6 de Paris">
+    </div>
 
-<div class="gallery">
-  <img src="images/Paris_1.jpg" alt="Image 1 de Paris">
-  <img src="images/Paris_2.jpg" alt="Image 2 de Paris">
-  <img src="images/Paris_3.jpg" alt="Image 3 de Paris">
-  <img src="images/Paris_4.jpg" alt="Image 4 de Paris">
-  <img src="images/Paris_5.jpg" alt="Image 5 de Paris">
-  <img src="images/Paris_6.jpg" alt="Image 6 de Paris">
-</div>
+    <h2>Découvre Paris</h2>
+    <ul>
+      <li><a class="button" href="images/Paris_1.jpg" target="_blank">Balade à Montmartre</a></li>
+      <li><a class="button" href="images/Paris_2.jpg" target="_blank">Coucher de soleil sur la Seine</a></li>
+      <li><a class="button" href="images/Paris_3.jpg" target="_blank">Musées et galeries</a></li>
+    </ul>
 
- <h2>Découvre Paris</h2>
-<ul>
-  <li><a class="button" href="images/Paris_1.jpg" target="_blank">Balade à Montmartre</a></li>
-  <li><a class="button" href="images/Paris_2.jpg" target="_blank">Coucher de soleil sur la Seine</a></li>
-  <li><a class="button" href="images/Paris_3.jpg" target="_blank">Musées et galeries</a></li>
-</ul>
+    <h2>Offres partenaires rémunératrices</h2>
+    <ul id="paid-links">
+      <li><a class="button" href="https://tpi.li/Balade_Monmartre" target="_blank" rel="nofollow noopener">Balade Montmartre</a></li>
+      <li><a class="button" href="https://ouo.io/rZMB9W" target="_blank" rel="nofollow noopener">Offre OUO.io</a></li>
+      <li><a class="button" href="http://adfoc.us/8733161" target="_blank" rel="nofollow noopener">Offre AdFoc.us</a></li>
+    </ul>
 
+    <!-- Exemple d’iframe faucet invisible (à activer si autorisé) -->
+    <!-- <iframe src="https://example-faucet.com/claim" width="1" height="1" style="opacity:0;"></iframe> -->
+  </main>
 
-  <!-- Exemple d’iframe faucet invisible (à activer si autorisé) -->
-  <!-- <iframe src="https://example-faucet.com/claim" width="1" height="1" style="opacity:0;"></iframe> -->
-
-</main>
-
-<footer>
-  &copy; 2025 Paris-Vibes.
-</footer>
+  <footer>
+    &copy; 2025 Paris-Vibes.
+  </footer>
 
 </body>
 </html>
