--- a/index.html
+++ b/index.html
@@ -41,15 +41,31 @@
       height: auto;
       margin: 10px 0;
     }
-    a.button {
-      display: inline-block;
-      margin: 10px 0;
-      padding: 10px 20px;
-      background-color: #e91e63;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-    }
+    .button-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 14px;
+  margin-top: 20px;
+}
+
+.partner-button {
+  background-color: #e91e63;
+  color: white;
+  padding: 12px 24px;
+  text-decoration: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.partner-button:hover {
+  background-color: #c2185b;
+  transform: scale(1.05);
+}
+
     footer {
       text-align: center;
       font-size: 0.8em;
@@ -88,12 +104,15 @@
       <li><a class="button" href="images/Paris_3.jpg" target="_blank">Musées et galeries</a></li>
     </ul>
 
-    <h2>Offres partenaires rémunératrices</h2>
-    <ul id="paid-links">
-      <li><a class="button" href="https://tpi.li/Balade_Monmartre" target="_blank" rel="nofollow noopener">Balade Montmartre</a></li>
-      <li><a class="button" href="https://ouo.io/rZMB9W" target="_blank" rel="nofollow noopener">Offre OUO.io</a></li>
-      <li><a class="button" href="http://adfoc.us/8733161" target="_blank" rel="nofollow noopener">Offre AdFoc.us</a></li>
-    </ul>
+    <section>
+  <h2>Offres partenaires rémunératrices</h2>
+  <div class="button-group">
+    <a href="https://tpi.li/Balade_Monmartre" class="partner-button" target="_blank" rel="nofollow noopener">Balade Montmartre</a>
+    <a href="https://ouo.io/rZMB9W" class="partner-button" target="_blank" rel="nofollow noopener">Offre OUO.io</a>
+    <a href="http://adfoc.us/8733161" class="partner-button" target="_blank" rel="nofollow noopener">Offre AdFoc.us</a>
+  </div>
+</section>
+
 
     <!-- Exemple d’iframe faucet invisible (à activer si autorisé) -->
     <!-- <iframe src="https://example-faucet.com/claim" width="1" height="1" style="opacity:0;"></iframe> -->
