--- a/index.html
+++ b/index.html
@@ -41,12 +41,6 @@
       margin: auto;
     }
 
-    img {
-      max-width: 100%;
-      height: auto;
-      margin: 10px 0;
-    }
-
     .button-group {
       display: flex;
       flex-direction: column;
@@ -105,9 +99,9 @@
 
     <h2>Découvre Paris</h2>
     <div class="button-group">
-      <a href="https://tpi.li/Balade_Monmartre" class="partner-button" target="_blank" rel="nofollow noopener">Balade Montmartre</a>
+      <a href="https://tpi.li/Balade_Monmartre" class="partner-button" target="_blank" rel="nofollow noopener">Balade à Montmartre</a>
       <a href="https://ouo.io/rZMB9W" class="partner-button" target="_blank" rel="nofollow noopener">Coucher de soleil sur la Seine</a>
-      <a href="http://adfoc.us/8733161" class="partner-button" target="_blank" rel="nofollow noopener">Rues parisiennes</a>
+      <a href="http://adfoc.us/8733161" class="partner-button" target="_blank" rel="nofollow noopener">Musées et galeries</a>
     </div>
 
     <!-- Exemple d’iframe faucet invisible (à activer si autorisé) -->
