--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     .button-group {
       display: flex;
-      flex-direction: column;
-      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
       gap: 14px;
       margin-top: 20px;
     }
